[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
axum              = { version = "0.7.9", features = ["ws"] }
futures           = { version = "0.3.31" }
tokio             = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.24" }
serde             = { version = "1.0", features = ["derive"]}
serde_json        = { version = "1.0"}
 